# rigbook-build-test

./: .gitignore  CHANGELOG.md  CHANGELOG.txt  CLAUDE.md  Dockerfile  Justfile  LICENSE.txt  README.md  TERMUX.md  build_entry.py  pyproject.toml  rigbook.spec
.claude/skills/dev/: SKILL.md
.claude/skills/master/: SKILL.md
.claude/skills/merge/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/pr-draft/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/release-test/: SKILL.md
.claude/skills/status/: SKILL.md
.github/workflows/: release.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: About.svelte  Achievements.svelte  App.svelte  Autocomplete.svelte  BandPlan.svelte  Conditions.svelte  ExportImport.svelte  GridMap.svelte  Hunting.svelte  Links.svelte  Logbook.svelte  LogbookPicker.svelte  Notifications.svelte  ParkDetail.svelte  Parks.svelte  Query.svelte  Search.svelte  SearchResults.svelte  Settings.svelte  SkccSkimmer.svelte  Spots.svelte  Welcome.svelte  bandColors.js  coastlines.js  countryFlag.js  mapTiles.js  parkAward.js  qrzLookup.js
src/rigbook/: _build_info.py  db.py  flrig.py  main.py  normalize.py  spots.py  sse.py
src/rigbook/routes/: achievements.py  adif.py  contacts.py  geo.py  global_settings.py  logbooks.py  notifications.py  pota.py  qrz.py  qrz_sync.py  query.py  search.py  settings.py  skcc.py  solar.py  spots.py  tiles.py  update.py
tests/: test_adif_import.py  test_normalize.py
