[project]
name = "rigbook"
version = "0.1.0"
description = "Ham radio logbook web application"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "aiosqlite",
    "pycountry>=26.2.16",
    "pyadif-file>=1.4",
]

[project.scripts]
rigbook = "rigbook.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rigbook"]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.ruff]
line-length = 88
