[project]
name = "rigbook"
version = "0.2.16"
description = "Ham radio logbook web application"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "pycountry>=26.2.16",
    "pyadif-file>=1.4",
    "python-multipart>=0.0.22",
    "httpx",
    "packaging",
]

[project.scripts]
rigbook = "rigbook.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rigbook"]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]
build = [
    "pyinstaller>=6.0",
]

[tool.ruff]
line-length = 88
